languages/EmbeddedMontiArcDynamics/src/test/resources/test/embeddedmontiarcdynamic/cocos/invalid/newDynamicComponentAndPort/V3.emad
/* (c) https://github.com/MontiCore/monticore */

package newDynamicComponentAndPort;

dynamic component V3 {

    ports
        dynamic in Q b[0:3];

    instance A aaa;

    @ b::connect{
        connect 123 -> aaa[?].a[?];
    }

}
